# live-bootcamp-project

./: .gitignore  Cargo.toml  Slumber.yml  Taskfile.yml  notes.md
auth-service/: Cargo.toml
auth-service/src/: lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: first_step_solution  helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
src/: main.rs
