[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
