[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
